# python-project-lvl2

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  flake28.yml  flake8.yml  pylint.yml  tests.yml
formatters/: formatter.py  json_format.py  plain.py  stylish.py
gendiff/: __init__.py  arg_parser.py  cli.py  comparator.py  formatter.py  gendiff.py  generate_diff.py  input_files_parser.py  input_output_parser.py  input_parser.py  json_convertor.py  parser.py  stylish.py  tree.py  yaml_convertor.py
gendiff/converstors/: json_conv.py  yaml_conv.py
gendiff/formatters/: __init__.py  formatter.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
gendiff/tests/: test_comparator.py  test_convertors.py  test_gendiff.py  test_stylish.py
json_format/: json_format.py
plain/: plain.py
stylish/: stylish.py
tests/: __init__.py  test_gendiff.py
tests/fixtures/: file1.yml
tests/fixtures/outputs/: deep_file.json  simple_file.json
tests/formatters/: test_formatters.py
tests/gendiff/: test_comparator.py  test_convertors.py  test_input_output_parser.py  test_input_parser.py
tests/json_format/: test_json_format.py
tests/plain/: test_plain.py
tests/stylish/: test_stylish.py
